--- a/examples/model_hosting/notebook/simple_temperature_converter/SimpleTemperatureConverter.ipynb
+++ b/examples/model_hosting/notebook/simple_temperature_converter/SimpleTemperatureConverter.ipynb
@@ -53,7 +53,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice that we start the cell with `# !model`. This way we say that this code should be included in our model. The next cells below will only be for local exection, and are not supposed to be ran in Model Hosting. And thus do not start with `# !model`.\n",
+    "Notice that we start the cell with `# !model`. This way we say that this code should be included in our model. The next cells below will only be for local execution, and are not supposed to be ran in Model Hosting. And thus do not start with `# !model`.\n",
     "\n",
     "Okey, now we have defined our model. Let's try it out locally before we deploy it to Model Hosting."
    ]
