--- a/examples/model_hosting/simple_function/SimpleFunction.ipynb
+++ b/examples/model_hosting/simple_function/SimpleFunction.ipynb
@@ -126,13 +126,22 @@
     "schedule_data_spec = ScheduleDataSpec(\n",
     "    input=ScheduleInputSpec(\n",
     "        time_series={\n",
-    "            \"x1\": ScheduleInputTimeSeriesSpec(id=INPUT_TS_1, aggregate=\"average\", granularity=\"10s\"),\n",
-    "            \"x2\": ScheduleInputTimeSeriesSpec(id=INPUT_TS_2, aggregate=\"average\", granularity=\"10s\")\n",
+    "            \"x1\": ScheduleInputTimeSeriesSpec(\n",
+    "                id=INPUT_TS_1, \n",
+    "                aggregate=\"average\", \n",
+    "                granularity=\"10s\"\n",
+    "            ),\n",
+    "            \"x2\": ScheduleInputTimeSeriesSpec(\n",
+    "                id=INPUT_TS_2, \n",
+    "                aggregate=\"average\", \n",
+    "                granularity=\"10s\")\n",
     "        }\n",
     "    ),\n",
     "    output=ScheduleOutputSpec(\n",
     "        time_series={\n",
-    "            \"y\": ScheduleOutputTimeSeriesSpec(id=OUTPUT_TS)\n",
+    "            \"y\": ScheduleOutputTimeSeriesSpec(\n",
+    "                id=OUTPUT_TS\n",
+    "            )\n",
     "        }\n",
     "    ),\n",
     "    start=\"now\",\n",
@@ -199,10 +208,29 @@
     }
    ],
    "source": [
-    "ds = DataSpec(time_series={\n",
-    "    \"input1\": TimeSeriesSpec(id=INPUT_TS_1, aggregate=\"average\", granularity=\"10s\", start=\"5m-ago\", end=\"now\"),\n",
-    "    \"input2\": TimeSeriesSpec(id=INPUT_TS_2, aggregate=\"average\", granularity=\"10s\", start=\"5m-ago\", end=\"now\"),\n",
-    "    \"output\": TimeSeriesSpec(id=OUTPUT_TS, aggregate=\"average\", granularity=\"10s\", start=\"5m-ago\", end=\"now\")\n",
+    "ds = DataSpec(\n",
+    "    time_series={\n",
+    "        \"input1\": TimeSeriesSpec(\n",
+    "            id=INPUT_TS_1, \n",
+    "            aggregate=\"average\", \n",
+    "            granularity=\"10s\", \n",
+    "            start=\"5m-ago\", \n",
+    "            end=\"now\"\n",
+    "        ),\n",
+    "        \"input2\": TimeSeriesSpec(\n",
+    "            id=INPUT_TS_2, \n",
+    "            aggregate=\"average\", \n",
+    "            granularity=\"10s\", \n",
+    "            start=\"5m-ago\", \n",
+    "            end=\"now\"\n",
+    "        ),\n",
+    "        \"output\": TimeSeriesSpec(\n",
+    "            id=OUTPUT_TS, \n",
+    "            aggregate=\"average\", \n",
+    "            granularity=\"10s\", \n",
+    "            start=\"5m-ago\", \n",
+    "            end=\"now\"\n",
+    "        )\n",
     "})\n",
     "\n",
     "df = DataFetcher(ds).time_series.fetch_dataframe([\"input1\", \"input2\", \"output\"])\n",
