Remove comments about arbitrary json

--- a/examples/model_hosting/scheduled_model/ScheduledPrediction.ipynb
+++ b/examples/model_hosting/scheduled_model/ScheduledPrediction.ipynb
@@ -7,7 +7,6 @@
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
-    "from time import time\n",
     "import os\n",
     "import pickle\n",
     "\n",
@@ -210,7 +209,7 @@
     "    name=\"prod-rate-v01\",\n",
     "    runtime_version=\"0.1\",\n",
     "    description=\"Some description\", # Optional\n",
-    "    metadata={\"interesting-metadata\": \"anything\"}, # Optional (can be arbitrary JSON)\n",
+    "    metadata={\"interesting-metadata\": \"anything\"}, # Optional\n",
     "    package_directory=\"prod_rate\"\n",
     ").id"
    ]
@@ -240,7 +239,7 @@
     "    ],\n",
     "    output_fields=[{\"name\": \"production_rate\", \"type\": \"TIME_SERIES\"}],\n",
     "    description=\"Some description\", # Optional\n",
-    "    metadata={\"interesting-metadata\": \"anything\"}, # Optional (can be arbitrary JSON)\n",
+    "    metadata={\"interesting-metadata\": \"anything\"}, # Optional\n",
     ").id"
    ]
   },
@@ -276,7 +275,7 @@
     "    name=\"tutorial-model-version\",\n",
     "    source_package_id=source_package_id,\n",
     "    description=\"Some description\", # Optional\n",
-    "    metadata={\"interesting-metadata\": \"anything\"}, # Optional (can be arbitrary JSON)\n",
+    "    metadata={\"interesting-metadata\": \"anything\"}, # Optional\n",
     "    artifacts_directory=\"artifacts\"\n",
     ").id"
    ]
@@ -511,7 +510,7 @@
     "    schedule_data_spec=schedule_data_spec,\n",
     "    args={}, # Optional - Will be passed to all predictions\n",
     "    description=\"Some description\", # Optional\n",
-    "    metadata={\"interesting-metadata\": \"anything\"}, # Optional (can be arbitrary JSON)\n",
+    "    metadata={\"interesting-metadata\": \"anything\"}, # Optional\n",
     ").id"
    ]
   },
