--- a/examples/model_hosting/notebook/simple_scheduled_calculation/SimpleScheduledCalculation.ipynb
+++ b/examples/model_hosting/notebook/simple_scheduled_calculation/SimpleScheduledCalculation.ipynb
@@ -179,8 +179,9 @@
    ],
    "source": [
     "import pandas as pd\n",
+    "from cognite.model_hosting.schedules import ScheduleOutput\n",
     "\n",
-    "df = pd.DataFrame(prediction[\"timeSeries\"][\"mean\"], columns=[\"timestamp\", \"mean\"])\n",
+    "df = ScheduleOutput(prediction).get_dataframe(\"mean\")\n",
     "df.plot(x=\"timestamp\")"
    ]
   },
@@ -335,7 +336,7 @@
     }
    ],
    "source": [
-    "df = pd.DataFrame(prediction[\"timeSeries\"][\"mean\"], columns=[\"timestamp\", \"mean\"])\n",
+    "df = ScheduleOutput(prediction).get_dataframe(\"mean\")\n",
     "df.plot(x=\"timestamp\")"
    ]
   },
