Fix missing %matplotlib inline

--- a/examples/model_hosting/notebook/simple_scheduled_calculation/SimpleScheduledCalculation.ipynb
+++ b/examples/model_hosting/notebook/simple_scheduled_calculation/SimpleScheduledCalculation.ipynb
@@ -81,6 +81,7 @@
     "    ),\n",
     "})\n",
     "\n",
+    "%matplotlib inline\n",
     "DataFetcher(example_data_spec).time_series.fetch_dataframe([\"x\", \"y\"]).plot(x=\"timestamp\")"
    ]
   },
