minor spelling errors/improvements

--- a/examples/model_hosting/notebook/simple_temperature_converter/SimpleTemperatureConverter.ipynb
+++ b/examples/model_hosting/notebook/simple_temperature_converter/SimpleTemperatureConverter.ipynb
@@ -53,9 +53,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice that we start the cell with `# !model`. This way we say that this code should be included in our model. The next cells below will only be for local execution, and are not supposed to be ran in Model Hosting. And thus do not start with `# !model`.\n",
+    "Notice that we start the cell with `# !model`. This way we say that this code should be included in our model. The next cells below will only be for local execution, and are not supposed to be run in Model Hosting. And thus do not start with `# !model`.\n",
     "\n",
-    "Okey, now we have defined our model. Let's try it out locally before we deploy it to Model Hosting."
+    "Okay, now we have defined our model. Let's try it out locally before we deploy it to Model Hosting."
    ]
   },
   {
@@ -110,7 +110,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To deploy a model version we first need a model."
+    "To deploy a model version we first create a model and retrieve its id."
    ]
   },
   {
@@ -175,7 +175,7 @@
    "source": [
     "# Testing the model\n",
     "\n",
-    "Now that's it deployed we can test it out."
+    "Now that it's deployed we can test it out."
    ]
   },
   {
