--- a/examples/model_hosting/scheduled_model/ScheduledPrediction.ipynb
+++ b/examples/model_hosting/scheduled_model/ScheduledPrediction.ipynb
@@ -30,7 +30,7 @@
    "source": [
     "# Introduction\n",
     "\n",
-    "For this tutorial we will train a simple model which will try to find the production rate of some imaginary equipment (named \"abc\") given the temperature, pressure and rotation speed.\n",
+    "In this tutorial we will train a simple model which will try to find the production rate of some imaginary equipment (named \"abc\") given the temperature, pressure and rotation speed.\n",
     "\n",
     "Imagine that we are currently measuring the production rate of this equipment, but continously measuring the rate is costly.\n",
     "We know that it should be possible infer the rate if we know the temperature, pressure and rotation speed.\n",
@@ -151,7 +151,7 @@
    "source": [
     "# 1. Train a model artifact\n",
     "\n",
-    "For this tutorial, we will train a model locally using our newly created training data."
+    "In this tutorial, we will train a model locally using our newly created training data."
    ]
   },
   {
@@ -183,8 +183,8 @@
     "We do this by creating a Python package.\n",
     "Our package is named `prod_rate` and can be found in a folder with the same name.\n",
     "Please have a look!\n",
-    "It's just a regular Python package that are pip-installable.\n",
-    "For this tutorial we just load the trained model (which we will later upload to the hosting environment) and perform a prediction on it.\n",
+    "It's just a regular Python package that is pip-installable.\n",
+    "In this tutorial we just load the trained model (which we will later upload to the hosting environment) and perform a prediction on it.\n",
     "\n",
     "It's required that your model resides in a class named Model, and that this class is inside a module (i.e. file) named model (model.py). You can read more about this in the docs.\n",
     "Notice that our requirements (packages that our model needs - in this case scikit-learn) are defined in `setup.py`."
@@ -447,9 +447,9 @@
    "source": [
     "# 6. Create schedule\n",
     "\n",
-    "Schedules perform regularly prediction on some specified input using some specified model and writes to specified output.\n",
+    "Schedules regularly perform prediction on some specified input using some specified model and writes to specified output.\n",
     "It's important to note that schedules use models (not model versions directly) to perform predictions.\n",
-    "So you can actually change the implementation of the model by creating a new model version and then setting this as active version.\n",
+    "So you can actually change the implementation of the model by creating a new model version and then setting this as the active version.\n",
     "When you change the active version of a model, it will take immediate effect on all schedules using that model.\n",
     "\n",
     "Creating a schedule is simply a matter of specifying the model, the input data and the output data.\n",
