--- a/examples/model_hosting/simple_function/SimpleFunction.ipynb
+++ b/examples/model_hosting/simple_function/SimpleFunction.ipynb
@@ -24,7 +24,7 @@
    "source": [
     "# Introduction\n",
     "\n",
-    "For this tutorial we will deploy a scheduled function which adds together two time series and multiplies them by pi.\n",
+    "In this tutorial we will deploy a scheduled function which adds together two time series and multiplies them by pi.\n",
     "\n",
     "The source package for this function is located in the \"transform\" directory.\n",
     "\n",
