--- a/examples/model_hosting/notebook/advanced_temperature_converter/AdvancedTemperatureConverter.ipynb
+++ b/examples/model_hosting/notebook/advanced_temperature_converter/AdvancedTemperatureConverter.ipynb
@@ -109,9 +109,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice that we start each the cell with `# !model`. This means this code will be included in our model. The next cells below will only be for local execution, and are not supposed to be executed in Model Hosting. And thus do not start with `# !model`. For our model to work with Model Hosting we have to define a `predict()` function. It's first parameter must be `instance` - the entity on which to perform prediction on. After that we may define our own parameters. We can of course also define other functions (and classes, etc) to help us do the prediction as we have done above.\n",
+    "Notice that we start each cell with `# !model`. This means this code will be included in our model. The next cells below will only be for local execution, and are not supposed to be executed in Model Hosting. And thus do not start with `# !model`. For our model to work with Model Hosting we have to define a `predict()` function. It's first parameter must be `instance` - the entity on which to perform prediction on. After that we may define our own parameters. We can of course also define other functions (and classes, etc) to help us do the prediction as we have done above.\n",
     "\n",
-    "Okey, now we have defined our model. Let's try it out locally before we deploy it to Model Hosting."
+    "Okay, now we have defined our model. Let's try it out locally before we deploy it to Model Hosting."
    ]
   },
   {
@@ -271,7 +271,7 @@
    "source": [
     "# Testing the model\n",
     "\n",
-    "Now that's it deployed we can test it out."
+    "Now that it's deployed we can test it out."
    ]
   },
   {
