--- a/examples/model_hosting/notebook/training/LocalTraining.ipynb
+++ b/examples/model_hosting/notebook/training/LocalTraining.ipynb
@@ -215,13 +215,13 @@
    "source": [
     "We simply mark every cell we want included in the model with `# !model`. We don't include the `train_model()` function since we'll do training locally in this tutorial.\n",
     "\n",
-    "Our `train_model()` function must have `open_artifact` as first parameter. The second parameter is user-defined. `open_artifact` is just like the builtin function `open()`. It can be used to read and write files. But `open_artifact()` point to a storage location specific for the artifacts of a single model version. When you train locally this will just be a folder on your machine, while when you train in Model Hosting this will be a special cloud storage location.\n",
+    "Our `train_model()` function must have `open_artifact` as it's first parameter. The second parameter is user-defined. `open_artifact` is just like the builtin function `open()`. It can be used to read and write files. But `open_artifact()` points to a storage location specific for the artifacts of a single model version. When you train locally this will just be a folder on your machine, while when you train in Model Hosting this will be a special cloud storage location.\n",
     "\n",
     "The purpose of `load_model()` is to load our model from the artifact storage - from where it was written in `train_model`. It's first parameter must be `open_artifact`.\n",
     "\n",
     "The `predict()` method must take `model` as the first parameter and `instance` as second. The `model` parameter is whatever `load_model` returns and can be an arbitrary Python value, but is in this case an instance of LinearRegression (our trained regressor). `instance` is the value to do prediction on. We have here assumed the user will pass in a data spec as instance, but it can be whatever you want as long as it's JSON serializable.\n",
     "\n",
-    "Okey, let's train our model locally."
+    "Okay, let's train our model locally."
    ]
   },
   {
@@ -303,7 +303,7 @@
    "metadata": {},
    "source": [
     "Looks good (almost perfect actually - that's because we use fake data in this tutorial).\n",
-    "If this was a real use case we would probably do more than just plot the predictions, but will leave it at that and turn our focus on how to deploy."
+    "If this was a real use case we would probably do more than just plot the predictions, but we will leave it at that and turn our focus on how to deploy."
    ]
   },
   {
@@ -345,7 +345,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And then we deploy this notebook and our trained model as a model version. It's important you **save the notebook** before doing this since the notebook file will be read to find your model. Note that we specify the folder we saved artifacts to during training. All artifacts/files in this folder is uploaded."
+    "And then we deploy this notebook and our trained model as a model version. It's important you **save the notebook** before doing this since the notebook file will be read to find your model. Note that we specify the folder we saved artifacts to during training. All artifacts/files in this folder are uploaded."
    ]
   },
   {
@@ -395,7 +395,7 @@
    "source": [
     "# Testing the model\n",
     "\n",
-    "Now that's it deployed we can test it out. Let's perform the same prediction as we did locally - on the validation data."
+    "Now that it's deployed we can test it out. Let's perform the same prediction as we did locally - on the validation data."
    ]
   },
   {
