--- a/examples/model_hosting/simple_train_predict/TrainAndPredict.ipynb
+++ b/examples/model_hosting/simple_train_predict/TrainAndPredict.ipynb
@@ -26,7 +26,7 @@
    "source": [
     "# Introduction\n",
     "\n",
-    "For this tutorial we will train a very simple linear regression model which predicts one value given two features.\n",
+    "In this tutorial we will train a very simple linear regression model which predicts one value given two features.\n",
     "This example is unrealistically simple and trivial on purpose to give more attention to Model Hosting.\n",
     "\n",
     "We have some training data in the two files `data.csv` and `target.csv`.\n",
@@ -338,7 +338,7 @@
     "The first thing we need to do is write the code for our model.\n",
     "We do this by creating a Python package.\n",
     "Our package is named `linreg` and can be found in a folder with the same name.\n",
-    "It's just a regular Python package that are pip-installable.\n",
+    "It's just a regular Python package that is pip-installable.\n",
     "\n",
     "It's required that your model resides in a class named Model, and that this class is inside a module (i.e. file) named model (model.py). You can read more about this in the docs.\n",
     "Notice that our requirements (packages that our model needs) are defined in `setup.py`."
