Improve model hosting examples

--- a/examples/model_hosting/scheduled_model/ScheduledPrediction.ipynb
+++ b/examples/model_hosting/scheduled_model/ScheduledPrediction.ipynb
@@ -30,7 +30,7 @@
    "source": [
     "# Introduction\n",
     "\n",
-    "For this tutorial we will train a simple model which will try to find the production rate of some imaginary equipment (named \"abc\") given the temperature, pressure and rotation speed.\n",
+    "For this tutorial we will train a simple model which will try to find the production rate of some imaginary equipment given the temperature, pressure and rotation speed.\n",
     "\n",
     "Imagine that we are currently measuring the production rate of this equipment, but continously measuring the rate is costly.\n",
     "We know that it should be possible infer the rate if we know the temperature, pressure and rotation speed.\n",
@@ -60,7 +60,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The first four time series are populated with sensor values, while the last one (abc_predicted_productio_rate) is a new time series we have created for the purpose of filling it with values from our model.\n",
+    "The first four time series are populated with sensor values, while the last one (predicted_production_rate) is a new time series we have created for the purpose of filling it with values from our model.\n",
     "\n",
     "We'll use data from the last two days as training data.\n",
     "Let's define a data spec for the training data and plot it:"
@@ -186,7 +186,7 @@
     "It's just a regular Python package that are pip-installable.\n",
     "For this tutorial we just load the trained model (which we will later upload to the hosting environment) and perform a prediction on it.\n",
     "\n",
-    "It's required that your model resides in a class named Model, and that this class is inside a module (i.e. file) named model (model.py). You can read more about this in the docs.\n",
+    "It's required that your model resides in a class named Model, and that this class is inside a module (i.e. file) named model (model.py). You can read more about this in the [docs](https://doc.cognitedata.com/concepts/model_hosting.html).\n",
     "Notice that our requirements (packages that our model needs - in this case scikit-learn) are defined in `setup.py`."
    ]
   },
@@ -447,9 +447,9 @@
    "source": [
     "# 6. Create schedule\n",
     "\n",
-    "Schedules perform regularly prediction on some specified input using some specified model and writes to specified output.\n",
+    "Schedules regularly run `predict` on some specified inputs using some specified model and writes to specified output.\n",
     "It's important to note that schedules use models (not model versions directly) to perform predictions.\n",
-    "So you can actually change the implementation of the model by creating a new model version and then setting this as active version.\n",
+    "So you can actually change the implementation of the model by creating a new model version and then setting this as the model's active version.\n",
     "When you change the active version of a model, it will take immediate effect on all schedules using that model.\n",
     "\n",
     "Creating a schedule is simply a matter of specifying the model, the input data and the output data.\n",
@@ -457,9 +457,9 @@
     "`windowSize` is the timespan of datapoints that each individual prediction will receive,\n",
     "while `stride` is how often to do prediction.\n",
     "Note that if `stride < windowSize` you will receive the same datapoints multiple times because windows overlap.\n",
-    "This can be nice if your model needs some look-back for each prediction.\n",
+    "This can be useful if your model needs some look-back for each prediction.\n",
     "\n",
-    "We'll set up our schedule to take in `abc_temp`, `abc_pressure`, `abc_rpm` and write predictions to `abc_predicted_production_rate`."
+    "We'll set up our schedule to read from `temp`, `pressure`, `rpm` and write predictions to `predicted_production_rate`."
    ]
   },
   {
