--- a/examples/model_hosting/simple_function/SimpleFunction.ipynb
+++ b/examples/model_hosting/simple_function/SimpleFunction.ipynb
@@ -108,9 +108,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we can create a schedule spec for defining which data we will pass to our function and how the input data will be traversed.\n",
+    "Now we can create a schedule spec to define which data we will pass to our function and how the input data will be processed.\n",
     "\n",
-    "Here you can fill in your input and output time series."
+    "You should replace `...` with your input and output time series IDs (not the time series names)."
    ]
   },
   {
