--- a/examples/model_hosting/simple_train_predict/TrainAndPredict.ipynb
+++ b/examples/model_hosting/simple_train_predict/TrainAndPredict.ipynb
@@ -291,7 +291,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Actually, our training data are so that `y = 10 + 3*f1 + f2`, so a linear regression model should be able to fit this perfectly."
+    "Actually, our training data have been generated such that `y = 10 + 3*f1 + f2`, so a linear regression model should be able to fit this perfectly."
    ]
   },
   {
@@ -316,14 +316,14 @@
     "data_file_id = files.upload_file(\n",
     "    file_path=\"data/data.csv\",\n",
     "    file_name=\"data.csv\",\n",
-    "    directory=\"hosting-tutorial/train_and_predict\",\n",
+    "    directory=\"examples/model_hosting/simple_train_and_predict\",\n",
     "    content_type=\"text/csv\",\n",
     "    overwrite=True\n",
     ")[\"fileId\"]\n",
     "target_file_id = files.upload_file(\n",
     "    file_path=\"data/target.csv\",\n",
     "    file_name=\"target.csv\",\n",
-    "    directory=\"hosting-tutorial/train_and_predict\",\n",
+    "    directory=\"examples/model_hosting/simple_train_and_predict\",\n",
     "    content_type=\"text/csv\",\n",
     "    overwrite=True\n",
     ")[\"fileId\"]"
@@ -462,7 +462,7 @@
     "# 5. (Optional) Check the training outcome\n",
     "\n",
     "What has our linear regression model learned?\n",
-    "Since we persisted the coefficients in `coefficients.csv` during the training routine we can now take a look at them manually of we want.\n",
+    "The model we created persists the coefficients in `coefficients.csv` during the training routine, so we can now take a look at them manually of we want.\n",
     "\n",
     "Remember that we know our training data is given by `y = 10 + 3*f1 + f2`."
    ]
