Minor spelling improvements (#8)
* minor spelling errors/improvements

* Fix formatting

--- a/examples/model_hosting/notebook/simple_scheduled_calculation/SimpleScheduledCalculation.ipynb
+++ b/examples/model_hosting/notebook/simple_scheduled_calculation/SimpleScheduledCalculation.ipynb
@@ -41,7 +41,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's take a quick look on the last two hours"
+    "Let's take a quick look at the last two hours."
    ]
   },
   {
@@ -136,9 +136,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice that we start each the cell with `# !model`. This means this code will be included in our model. The next cells below will only be for local execution, and are not supposed to be executed in Model Hosting. And thus do not start with `# !model`. For our model to work with Model Hosting we have to define a `predict()` function. It's first parameter must be `instance` - the entity on which to perform prediction on. After that we may define our own parameters. We can of course also define other functions (and classes, etc) to help us do the prediction as we have done above.\n",
+    "Notice that we start each cell with `# !model`. This means this code will be included in our model. The next cells below will only be for local execution, and are not supposed to be executed in Model Hosting. And thus do not start with `# !model`. For our model to work with Model Hosting we have to define a `predict()` function. It's first parameter must be `instance` - the entity on which to perform prediction on. After that we may define our own parameters. We can of course also define other functions (and classes, etc) to help us do the prediction as we have done above.\n",
     "\n",
-    "Okey, now we have defined our model. Let's try it out locally before we deploy it to Model Hosting."
+    "Okay, now we have defined our model. Let's try it out locally before we deploy it to Model Hosting."
    ]
   },
   {
@@ -197,7 +197,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Deployingour model\n",
+    "# Deploying our model\n",
     "\n",
     "It's time to deploy our model. Let's first import what we need."
    ]
@@ -218,7 +218,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To deploy a model version we first need a model. Note that's important we specify the input and output fields for a model that will be scheduled."
+    "To deploy a model version we first need a model. Note that it's important to specify the input and output fields for a model that will be scheduled."
    ]
   },
   {
@@ -411,7 +411,7 @@
    "source": [
     "Now we just have to wait. It will run once a minute - so we'll wait a few minutes.\n",
     "\n",
-    "Once we have waited a bit we can try to download and plot the x and y time series together with our new mean time series. We'll take a look on the last 10 minutes."
+    "Once we have waited a bit we can try to download and plot the x and y time series together with our new mean time series. We'll take a look at the last 10 minutes."
    ]
   },
   {
