--- a/examples/model_hosting/scheduled_model/ScheduledPrediction.ipynb
+++ b/examples/model_hosting/scheduled_model/ScheduledPrediction.ipynb
@@ -30,7 +30,7 @@
    "source": [
     "# Introduction\n",
     "\n",
-    "For this tutorial we will train a simple model which will try to find the production rate of some imaginary equipment given the temperature, pressure and rotation speed.\n",
+    "In this tutorial we will train a simple model which will try to find the production rate of some imaginary equipment given the temperature, pressure and rotation speed.\n",
     "\n",
     "Imagine that we are currently measuring the production rate of this equipment, but continously measuring the rate is costly.\n",
     "We know that it should be possible infer the rate if we know the temperature, pressure and rotation speed.\n",
@@ -151,7 +151,7 @@
    "source": [
     "# 1. Train a model artifact\n",
     "\n",
-    "For this tutorial, we will train a model locally using our newly created training data."
+    "In this tutorial, we will train a model locally using our newly created training data."
    ]
   },
   {
@@ -183,8 +183,8 @@
     "We do this by creating a Python package.\n",
     "Our package is named `prod_rate` and can be found in a folder with the same name.\n",
     "Please have a look!\n",
-    "It's just a regular Python package that are pip-installable.\n",
-    "For this tutorial we just load the trained model (which we will later upload to the hosting environment) and perform a prediction on it.\n",
+    "It's just a regular Python package that is pip-installable.\n",
+    "In this tutorial we just load the trained model (which we will later upload to the hosting environment) and perform a prediction on it.\n",
     "\n",
     "It's required that your model resides in a class named Model, and that this class is inside a module (i.e. file) named model (model.py). You can read more about this in the [docs](https://doc.cognitedata.com/concepts/model_hosting.html).\n",
     "Notice that our requirements (packages that our model needs - in this case scikit-learn) are defined in `setup.py`."
