--- a/examples/photogrammetry/photogrammetryAPI.ipynb
+++ b/examples/photogrammetry/photogrammetryAPI.ipynb
@@ -33,7 +33,9 @@
    "source": [
     "## Step-by-step example\n",
     "\n",
-    "The photogrammetry API is currently only enabled for the **mltest** tenant. If you want access from other tenants, please contact us via the **#ml-vision** Slack channel or send us an email."
+    "The photogrammetry API is currently only enabled for a few selected tenants, including **mltest**. If you want access from other tenants, please contact us via the **#ml-vision** Slack channel or open a pull request in this repo.\n",
+    "\n",
+    "First, we make the imports we'll need for this tutorial and use an API key to authenticate. Make sure that you have first set the API key as an environment variable."
    ]
   },
   {
@@ -43,11 +45,13 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import requests\n",
     "from urllib.request import urlretrieve\n",
+    "from cognite.client import CogniteClient\n",
+    "from cognite.client.stable.assets import Asset\n",
     "\n",
-    "HEADERS = {\"api-key\": os.environ[\"COGNITE_API_KEY\"]} # Read API key as an environment variable\n",
-    "BASEURL = \"https://api.cognitedata.com/api/playground\""
+    "BASEURL = \"/api/playground/vision\"\n",
+    "os.environ[\"COGNITE_DISABLE_GZIP\"] = \"1\"\n",
+    "client = CogniteClient(api_key=os.environ['COGNITE_API_KEY'])"
    ]
   },
   {
@@ -62,15 +66,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "def list_photogrammetry_models():\n",
-    "    url = BASEURL + \"/vision/photogrammetry\"\n",
-    "    r = requests.get(url, headers=HEADERS)\n",
-    "    return r.json()\n",
-    "\n",
-    "list_photogrammetry_models()"
+    "response = client.get(url=f\"{BASEURL}/photogrammetry\").json()\n",
+    "response"
    ]
   },
   {
@@ -88,14 +90,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def add_asset(name):\n",
-    "    from cognite.client import CogniteClient\n",
-    "    client = CogniteClient()\n",
+    "def add_asset(client, name):\n",
     "    my_asset = Asset(name)\n",
     "    assets_to_post = [my_asset]\n",
-    "    res = client.assets.post_assets(assets_to_post)\n",
+    "    response = client.assets.post_assets(assets_to_post)\n",
     "    \n",
-    "# add_asset(\"50CX0001A\")"
+    "#add_asset(client, \"50CX0001A\")"
    ]
   },
   {
@@ -145,24 +145,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_photogrammetry_model(name, contextualise=False, tag_list=None):\n",
-    "    path = BASEURL + \"/vision/photogrammetry\"\n",
-    "    response = requests.post(\n",
-    "        path,\n",
-    "        json={\"name\": name, \"contextualise\": contextualise, \"tagList\": tag_list},\n",
-    "        headers=HEADERS,\n",
+    "def create_photogrammetry_model(client, name, contextualise=False, tag_list=None):\n",
+    "    response = client.post(\n",
+    "        url= f\"{BASEURL}/photogrammetry\",\n",
+    "        body={\"name\": name, \"contextualise\": contextualise, \"tagList\": tag_list}\n",
     "    )\n",
     "    return response.json()\n",
     "\n",
     "\n",
     "# Option 1) without contextualisation:\n",
-    "# photogrammetry_model = create_photogrammetry_model(name)\n",
+    "# photogrammetry_model = create_photogrammetry_model(client, name)\n",
     "\n",
     "# Option 2) contextualisation from assets in the tenant:\n",
-    "# photogrammetry_model = create_photogrammetry_model(name, contextualise=contextualise_model) \n",
+    "# photogrammetry_model = create_photogrammetry_model(client, name, contextualise=contextualise_model) \n",
     "\n",
     "# Option 3) contextualisation from tag_list\n",
-    "photogrammetry_model = create_photogrammetry_model(name, \n",
+    "photogrammetry_model = create_photogrammetry_model(client,\n",
+    "                                                   name, \n",
     "                                                   contextualise=contextualise_model, \n",
     "                                                   tag_list=\"['50CX0001A']\")\n",
     "photogrammetry_model"
@@ -183,12 +182,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def photogrammetry_model_info(photogrammetry_model_id):\n",
-    "    path = BASEURL + \"/vision/photogrammetry/{}\".format(photogrammetry_model_id)\n",
-    "    r = requests.get(path, headers=HEADERS)\n",
-    "    return r.json()\n",
-    "\n",
-    "photogrammetry_model_info(photogrammetry_model[\"id\"])"
+    "url = f\"{BASEURL}/photogrammetry/{photogrammetry_model['id']}\"\n",
+    "response = client.get(url=url).json()\n",
+    "response"
    ]
   },
   {
@@ -219,6 +215,7 @@
    "outputs": [],
    "source": [
     "def upload_images(upload_url, zip_file_path):\n",
+    "    import requests\n",
     "    headers = {\"content-length\": str(os.path.getsize(zip_file_path))}\n",
     "    \n",
     "    with open(zip_file_path, \"rb\") as file:\n",
@@ -249,9 +246,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "response = photogrammetry_model_info(photogrammetry_model[\"id\"])\n",
-    "\n",
     "output_filename = \"output.fbx\"\n",
+    "url = f\"{BASEURL}/photogrammetry/{photogrammetry_model['id']}\"\n",
+    "response = client.get(url=url).json()\n",
+    "\n",
     "\n",
     "if response[\"status\"] == \"SUCCESS\":\n",
     "    download_url = response[\"download_url\"]\n",
@@ -284,12 +282,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def delete_photogrammetry(pid):\n",
-    "    path = BASEURL + \"/vision/photogrammetry/{}\".format(pid)\n",
-    "    r = requests.delete(path, headers=HEADERS)\n",
-    "    return r.json()\n",
-    "\n",
-    "delete_photogrammetry(photogrammetry_model[\"id\"])"
+    "url = f\"{BASEURL}/photogrammetry/{photogrammetry_model['id']}\"\n",
+    "response = client.delete(url=url).json()\n",
+    "response"
    ]
   },
   {
