added func back

--- a/examples/photogrammetry/photogrammetryAPI.ipynb
+++ b/examples/photogrammetry/photogrammetryAPI.ipynb
@@ -71,8 +71,11 @@
    },
    "outputs": [],
    "source": [
-    "response = client.get(url=f\"{BASEURL}/photogrammetry\").json()\n",
-    "response"
+    "def list_photogrammetry_models():\n",
+    "    response = client.get(url=f\"{BASEURL}/photogrammetry\")\n",
+    "    return response.json()\n",
+    "\n",
+    "list_photogrammetry_models()"
    ]
   },
   {
@@ -182,9 +185,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = f\"{BASEURL}/photogrammetry/{photogrammetry_model['id']}\"\n",
-    "response = client.get(url=url).json()\n",
-    "response"
+    "def photogrammetry_model_info(photogrammetry_model_id):\n",
+    "    url = f\"{BASEURL}/photogrammetry/{photogrammetry_model_id}\"\n",
+    "    response = client.get(url=url)\n",
+    "    return response.json()\n",
+    "\n",
+    "photogrammetry_model_info(photogrammetry_model[\"id\"])"
    ]
   },
   {
@@ -246,10 +252,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output_filename = \"output.fbx\"\n",
-    "url = f\"{BASEURL}/photogrammetry/{photogrammetry_model['id']}\"\n",
-    "response = client.get(url=url).json()\n",
+    "response = photogrammetry_model_info(photogrammetry_model[\"id\"])\n",
     "\n",
+    "output_filename = \"output.fbx\"\n",
     "\n",
     "if response[\"status\"] == \"SUCCESS\":\n",
     "    download_url = response[\"download_url\"]\n",
@@ -282,9 +287,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = f\"{BASEURL}/photogrammetry/{photogrammetry_model['id']}\"\n",
-    "response = client.delete(url=url).json()\n",
-    "response"
+    "def delete_photogrammetry(photogrammetry_model_id):\n",
+    "    url = f\"{BASEURL}/photogrammetry/{photogrammetry_model_id}\"\n",
+    "    response = client.delete(url=url)\n",
+    "    return response.json()\n",
+    "\n",
+    "\n",
+    "delete_photogrammetry(photogrammetry_model[\"id\"])"
    ]
   },
   {
