--- a/examples/photogrammetry/photogrammetryAPI.ipynb
+++ b/examples/photogrammetry/photogrammetryAPI.ipynb
@@ -151,7 +151,7 @@
     "def create_photogrammetry_model(client, name, contextualise=False, tag_list=None):\n",
     "    response = client.post(\n",
     "        url= f\"{BASEURL}/photogrammetry\",\n",
-    "        body={\"name\": name, \"contextualise\": contextualise, \"tagList\": tag_list}\n",
+    "        body={\"name\": name, \"assetId\": \"\", \"tagList\": [], \"steps\": \"\", \"pipelineSteps2d\": \"\"}\n",
     "    )\n",
     "    return response.json()\n",
     "\n",
@@ -166,7 +166,7 @@
     "photogrammetry_model = create_photogrammetry_model(client,\n",
     "                                                   name, \n",
     "                                                   contextualise=contextualise_model, \n",
-    "                                                   tag_list=\"['50CX0001A']\")\n",
+    "                                                   tag_list=['50CX0001A'])\n",
     "photogrammetry_model"
    ]
   },
@@ -257,7 +257,7 @@
     "output_filename = \"output.fbx\"\n",
     "\n",
     "if response[\"status\"] == \"SUCCESS\":\n",
-    "    download_url = response[\"download_url\"]\n",
+    "    download_url = response[\"downloadUrl\"]\n",
     "    urlretrieve(download_url, output_filename)\n",
     "    \n",
     "response"
