--- a/examples/photogrammetry/photogrammetryAPI.ipynb
+++ b/examples/photogrammetry/photogrammetryAPI.ipynb
@@ -151,7 +151,7 @@
     "def create_photogrammetry_model(client, name, contextualise=False, tag_list=None):\n",
     "    response = client.post(\n",
     "        url= f\"{BASEURL}/photogrammetry\",\n",
-    "        body={\"name\": name, \"assetId\": \"\", \"tagList\": [], \"steps\": \"\", \"pipelineSteps2d\": \"\"}\n",
+    "        body={\"name\": name, \"assetId\": \"\", \"contextualise\":contextualise, \"tagList\": tag_list}\n",
     "    )\n",
     "    return response.json()\n",
     "\n",
