--- a/examples/photogrammetry/photogrammetryAPI.ipynb
+++ b/examples/photogrammetry/photogrammetryAPI.ipynb
@@ -166,7 +166,7 @@
     "photogrammetry_model = create_photogrammetry_model(client,\n",
     "                                                   name, \n",
     "                                                   contextualise=contextualise_model, \n",
-    "                                                   tag_list=\"['50CX0001A']\")\n",
+    "                                                   tag_list=['50CX0001A'])\n",
     "photogrammetry_model"
    ]
   },
@@ -257,7 +257,7 @@
     "output_filename = \"output.fbx\"\n",
     "\n",
     "if response[\"status\"] == \"SUCCESS\":\n",
-    "    download_url = response[\"download_url\"]\n",
+    "    download_url = response[\"downloadUrl\"]\n",
     "    urlretrieve(download_url, output_filename)\n",
     "    \n",
     "response"
