--- a/examples/photogrammetry/photogrammetryAPI.ipynb
+++ b/examples/photogrammetry/photogrammetryAPI.ipynb
@@ -67,7 +67,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -229,7 +229,7 @@
     "        \n",
     "zip_file_path = \"path/to/zipfile.zip\" # CHANGE ME! \n",
     "\n",
-    "upload_images(photogrammetry_model[\"uploadUrl\"], zip_file_path)"
+    "upload_images(photogrammetry_model[\"uploadURL\"], zip_file_path)"
    ]
   },
   {
@@ -257,7 +257,7 @@
     "output_filename = \"output.fbx\"\n",
     "\n",
     "if response[\"status\"] == \"SUCCESS\":\n",
-    "    download_url = response[\"downloadUrl\"]\n",
+    "    download_url = response[\"downloadURL\"]\n",
     "    urlretrieve(download_url, output_filename)\n",
     "    \n",
     "response"
