Update Model Hosting examples to 0.1.2

--- a/examples/model_hosting/simple_train_predict/TrainAndPredict.ipynb
+++ b/examples/model_hosting/simple_train_predict/TrainAndPredict.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Requirements**:\n",
+    "- You need to have the `cognite-sdk` package installed\n",
+    "- The environment variable `COGNITE_API_KEY` should be set"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -12,9 +21,7 @@
     "from cognite.client import CogniteClient\n",
     "from cognite.model_hosting.data_spec import DataSpec, FileSpec\n",
     "\n",
-    "# Make sure to set your API key\n",
-    "API_KEY = environ[\"COGNITE_API_KEY\"]\n",
-    "client = CogniteClient(api_key=API_KEY)\n",
+    "client = CogniteClient()\n",
     "\n",
     "files = client.files\n",
     "mlh = client.experimental.model_hosting"
@@ -646,7 +653,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.0"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
