--- a/examples/basics/visualising_open_industrial_data_test.ipynb
+++ b/examples/basics/visualising_open_industrial_data_test.ipynb
@@ -7,9 +7,9 @@
     "id": "eAXnMj5E9jWG"
    },
    "source": [
-    "<a href=\"https://colab.research.google.com/github/cognitedata/WiDS-2019/blob/master/WiDS_2019_Cognite_Part1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n",
+    "<a href=\"https://colab.research.google.com/github/cognitedata/cognite-python-docs/examples/basics/blob/master/visualising_open_industrial_data.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n",
     "\n",
-    "# Data Visualization and Time series prediction\n",
+    "# Visualising Open Industrial Data\n",
     "\n",
     "## What this notebook will achieve\n",
     "\n",
@@ -17,7 +17,6 @@
     "\n",
     "* Visualize and inspect data directly from the Cognite Data Platform.\n",
     "\n",
-    "* Apply Linear Regression for time series prediction.\n",
     "\n",
     "\n",
     "## Getting started\n",
