Update model hosting examples to use cognite-model-hosting==0.1.*

--- a/examples/model_hosting/notebook/simple_scheduled_calculation/SimpleScheduledCalculation.ipynb
+++ b/examples/model_hosting/notebook/simple_scheduled_calculation/SimpleScheduledCalculation.ipynb
@@ -113,7 +113,7 @@
    "outputs": [],
    "source": [
     "# !requirements\n",
-    "# cognite-model-hosting==0.1.2\n",
+    "# cognite-model-hosting==0.1.*\n",
     "# numpy==1.16.2"
    ]
   },
