--- a/examples/model_hosting/notebook/training/LocalTraining.ipynb
+++ b/examples/model_hosting/notebook/training/LocalTraining.ipynb
@@ -139,7 +139,7 @@
    "outputs": [],
    "source": [
     "# !requirements\n",
-    "# cognite-model-hosting==0.1.2\n",
+    "# cognite-model-hosting==0.1.*\n",
     "# scikit-learn==0.20.3"
    ]
   },
